# Paper-Replication

./: .gitignore  pyproject.toml
src/: transformer.py  translation_model.py  vision_transformer.py
tests/: test_transformer.py
