[project]
name = "paper-replication"
version = "0.1.0"
description = "A project that replicate AI papers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.8.5",
    "matplotlib>=3.10.9",
    "tensorboard>=2.20.0",
    "torch>=2.10.0",
    "torchinfo>=1.8.0",
    "torchmetrics>=1.9.0",
    "transformers>=5.9.0",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'win32'" },
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"
